--- a/landing-page/src/styles/_global.scss
+++ b/landing-page/src/styles/_global.scss
@@ -1,5 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Oswald:wght@700&family=Roboto&family=Source+Sans+Pro:wght@300&display=swap");
 
+$bp-large: 700px;
+$bp-small: 500px;
+
 *,
 *::before,
 *::after {
