--- a/landing-page/src/styles/_navbar.scss
+++ b/landing-page/src/styles/_navbar.scss
@@ -29,4 +29,21 @@
       height: 100%;
     }
   }
+
+  @media only screen and (max-width: $bp-large) {
+    .left {
+      flex: 0.7;
+      .logo {
+        font-size: 1.5rem;
+      }
+    }
+    .right {
+      padding: 1rem;
+      .links {
+        width: 100%;
+
+        font-size: 1rem;
+      }
+    }
+  }
 }
